# thegraph-token-api

./: .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup-pre-commit.sh
.github/workflows/: README.md  badges.yml  ci.yml  pypi-publish.yml  security.yml
examples/: README.md  quickstart.py  unified_price_api.py  unified_price_api_enum.py
examples/endpoints/evm/: README.md  balances.py  health.py  nfts.py  prices.py  swaps.py  tokens.py  transfers.py
examples/endpoints/svm/: README.md  balances.py  sol_price.py  swaps.py  transfers.py
src/thegraph_token_api/: __init__.py  base.py  client.py  constants.py  evm.py  logger.py  models.py  price_utils.py  simple.py  svm.py  types.py  unified_price_api.py
src/token_api/: __init__.py  base.py  evm.py  types.py
tests/: test_core_base.py  test_core_client.py  test_core_models.py  test_core_types.py  test_evm_api.py  test_evm_eth_price.py  test_price_utils.py  test_simple_api.py  test_svm_api.py  test_unified_price_api.py
